Connect to mySQL database and protect credentials with dotenv
Create the database with the name of the project.
Add the environment variables file to save the credentials. Add to .gitignore the environment variables file.
Move the title of the view to the form field.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "Francisco José Jourdan",
   "license": "ISC",
   "dependencies": {
-    "pug": "^3.0.2"
+    "mysql2": "^3.3.1",
+    "pug": "^3.0.2",
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
