--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "author": "Francisco José Jourdan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mysql2": "^3.3.1",
+    "nodemailer": "^6.9.2",
     "pug": "^3.0.2",
     "sequelize": "^6.31.1"
   },
