--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
     "nodemailer": "^6.9.2",
     "pug": "^3.0.2",
